fixed a variety of issues